2020-02-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.6.24

2019-12-12  Thierry Onkelinx <thierry.onkelinx@inbo.be>

	* DESCRIPTION (Version, Date): Roll minor version
	* R/sha1.R: ignore the "srcref" attribute if set
	* inst/tinytest/test_new_matrix_behaviour.R: update unit test
	* inst/tinytest/test_sha1.R: update unit test
	* man/sha1.Rd: update documentation

2019-12-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* src/init.c: Do not register a .Call method for PMurHash

2019-12-05  Will Landau  <will.landau@gmail.com>

	* R/init.R (.onLoad): Cache nosharing state in base::serialize
	(.hasNoSharing): Return cached value
	* R/digest.R (digest): Use cached value accessor
	* R/vdigest.R (non_streaming_digest): Use cached value accessor

2019-12-04  Dirk Eddelbuettel  <edd@debian.org>

	* R/init.R (.onLoad): Cache isWindows state
	(.isWindows): Return cached value
	* R/digest.R (digest): Use cached value accessor

2019-11-23  Dirk Eddelbuettel  <edd@debian.org>

	* inst/tinytest/test_new_matrix_behaviour.R: Split off tests affected
	by new matrix/array behavior in R-devel (i.e. future R 4.0.0)

2019-11-22  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Release 0.6.23

	* inst/tinytest/test_sha1.R: Uncomment several tests which failed
	under r-devel on Linux at CRAN

2019-11-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

2019-11-11  Bill Denney  <wdenney@humanpredictions.com>

        * R/sha1.R: Increase efficiency of num2hex()

2019-11-07  Bill Denney  <wdenney@humanpredictions.com>

        * NAMESPACE: add sha1_digest() and sha1_attr_digest() functions
        * R/sha1.R: Idem
        * man/sha1.Rd: Idem
        * Also, renamed sha1.rd to sha1.Rd

2019-11-03  Bill Denney  <wdenney@predictions.com>

        * R/sha1.R: Add support for the "(" class used in some formulae
        * NAMESPACE: Idem