@@ -1,8 +1,8 @@
-b039e71c1b69078bb600471d91fae53d *ChangeLog
-5a3bde52a5db7ebacfe5003e40095ff7 *DESCRIPTION
+a43f2b56a855207fc2447e26e66672d3 *ChangeLog
+688421add5ab2160fc88cebf42cebc88 *DESCRIPTION
 14402ee218da75987f233d61fa84ab8d *NAMESPACE
 82c734f29cbd8b0e29893316d3d5a480 *R/AES.R
-613aae1e82c934d2dc241a2325a4efc4 *R/digest.R
+0159b8f6047e5d77fe57f00763fd7d78 *R/digest.R
 481f6406e42aeaf0eb9da80ebd1c3601 *R/digest2int.R
 3afa681f8cae1c57282057525baf3731 *R/hmac.R
 5e4f6d949319a0c0f4401620e04ed03d *R/init.R
@@ -17,7 +17,7 @@ cdd17dda453ee280bdbaac3b405874d6 *demo/00Index
 b234ee4d69f5fce4486a80fdaf4a4263 *inst/GPL-2
 2110052aea8c1b68a2a46a44adb0d930 *inst/doc/sha1.R
 912b8395bbeb8c511e1f75b46d8157a6 *inst/doc/sha1.Rmd
-adf88331358fb3daf86706c0e8189a88 *inst/doc/sha1.html
+d1014ff342c28aed7a055cedbae95a79 *inst/doc/sha1.html
 82a62fb6337a2be9ae069fee3d50b614 *inst/include/pmurhashAPI.h
 4d75623e0ffe3c04eac1752b7d3d8f6b *inst/tinytest/test_aes.R
 052184be0e884920438e1779a03f8759 *inst/tinytest/test_crc32.R
