@@ -12,7 +12,7 @@
 
 <meta name="author" content="Thierry Onkelinx and Dirk Eddelbuettel" />
 
-<meta name="date" content="2020-02-12" />
+<meta name="date" content="2020-02-22" />
 
 <title>Calculating SHA1 hashes with digest() and sha1()</title>
 
@@ -303,7 +303,7 @@ code > span.er { color: #a61717; background-color: #e3d2d2; }
 
 <h1 class="title toc-ignore">Calculating SHA1 hashes with digest() and sha1()</h1>
 <h4 class="author">Thierry Onkelinx and Dirk Eddelbuettel</h4>
-<h4 class="date">2020-02-12</h4>
+<h4 class="date">2020-02-22</h4>
 
 
 
